kubernetes/apps/home-assistant/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: 8123
